add_executable(delete 83_DeleteRepeatedElement.cpp)
add_executable(inorderTraversal 94_inorderTraversal.cpp)
add_executable(searchRange 34_searchRange.cpp)
add_executable(sqrt 69_sqrt_x.cpp)
add_executable(isPerfectSquare 367_isPerfectSquare.cpp)
add_executable(removeElement 27_removeElement.cpp)
add_executable(moveZeroes 283_moveZeroes.cpp)
add_executable(backspaceCompare 844_backspaceCompare.cpp)
add_executable(sortedSquares 977_sortedSquares.cpp)
add_executable(minSubArrayLen 209_minSubArrayLen.cpp)
add_executable(generateMatrix 59_generateMatrix.cpp)