add_executable(delete 83_DeleteRepeatedElement.cpp)
add_executable(inorderTraversal 94_inorderTraversal.cpp)
add_executable(searchRange 34_searchRange.cpp)
add_executable(sqrt 69_sqrt_x.cpp)
add_executable(isPerfectSquare 367_isPerfectSquare.cpp)
add_executable(removeElement 27_removeElement.cpp)
add_executable(moveZeroes 283_moveZeroes.cpp)
add_executable(backspaceCompare 844_backspaceCompare.cpp)
add_executable(sortedSquares 977_sortedSquares.cpp)
add_executable(minSubArrayLen 209_minSubArrayLen.cpp)
add_executable(generateMatrix 59_generateMatrix.cpp)
add_executable(reverseList 206_reverseList.cpp)
add_executable(swapPairs 24_swapPairs.cpp)
add_executable(removeNthFromEnd 19_removeNthFromEnd.cpp)
add_executable(getIntersectionNode 2_07_getIntersectionNode.cpp)
add_executable(detectCycle 142_detectCycle.cpp)
add_executable(intersect 350_intersect.cpp)
add_executable(isHappy 202_isHappy.cpp)
add_executable(twoSum 1_twoSum.cpp)